--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -629,24 +629,25 @@ figure p {
 }
 
 .feedback {
-  position: fixed;
+  /* position: fixed;
   z-index: 96;
   right: 0;
-  bottom: 100px;
+  bottom: 100px; */
   cursor: pointer;
+  margin-top: 10px;
 
   display: flex;
-  flex-direction: column-reverse;
+  /* flex-direction: column-reverse; */
   align-items: center;
   padding: 16px 8px 16px 8px;
   gap: 4px;
 
-  height: 143px;
-  width: 40px;
+  width: 143px;
+  height: 40px;
 
   background: linear-gradient(0deg, #0278d5 0%, #3dc7f6 100%);
   border: 0;
-  border-radius: 8px 0px 0px 8px;
+  border-radius: 8px 8px 8px 8px;
 
   /* identical to box height, or 150% */
   letter-spacing: 0.5px;
@@ -654,14 +655,15 @@ figure p {
 }
 
 .feedback-span {
-  transform: rotate(-90deg);
+  /* transform: rotate(-90deg); */
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
 }
 
 .feedback-img {
-  margin-top: 26px;
+  transform: rotate(90deg);
+  /* margin-top: 26px; */
 }
 
 @media screen and (min-width: 1200px) {
