change gitness to code in styles

--- a/src/components/LandingPage/TutorialCard.module.scss
+++ b/src/components/LandingPage/TutorialCard.module.scss
@@ -144,8 +144,8 @@
 .iacm:hover{
     border-color: var(--mod-iacm-200);
 }
-.gitness:hover{
-    border-color: var(--mod-gitness-200);
+.code:hover{
+    border-color: var(--mod-code-200);
 }
 .platform:hover{
     border-color: var(--primary);
