--- a/src/components/LandingPage/styles.module.scss
+++ b/src/components/LandingPage/styles.module.scss
@@ -230,9 +230,9 @@
         padding-left: 10px;
     }
 }
-.btnGitness{
-    background: var(--mod-gitness-200);
-    border-color: var(--mod-gitness-200);
+.btnCode{
+    background: var(--mod-code-200);
+    border-color: var(--mod-code-200);
     img{
         padding-left: 10px;
     }
