feat: add Coveo support for SSCA, IaCM, Code Repository [HDH-196]

--- a/src/components/NavbarItems/CoveoSearch.scss
+++ b/src/components/NavbarItems/CoveoSearch.scss
@@ -340,8 +340,25 @@
 	color: var(--mod-iacm-300);
 }
 
-// Code (Gitness)
-.harness-search-module .CoveoFieldValue.CoveoFieldValueCode {
+// SSCA
+.harness-search-module .CoveoFieldValue.CoveoFieldValueSSCA {
+	background: var(--mod-ssca-100);
+	border: 1px solid var(--mod-ssca-200);
+	color: var(--mod-ssca-300);
+	&::before {
+		content: url('/img/icon_ssca_s.svg');
+		display: inline-block;
+		width: 16px;
+		height: 16px;
+		margin-right: 4px;
+	}
+}
+.harness-search-module .CoveoFieldValue.CoveoFieldValueSSCA .coveo-clickable {
+	color: var(--mod-ssca-300);
+}
+
+// Gitness
+.harness-search-module .CoveoFieldValue.CoveoFieldValueGitness {
 	background: var(--mod-code-100);
 	border: 1px solid var(--mod-code-200);
 	color: var(--mod-codes-300);
@@ -353,7 +370,24 @@
 		margin-right: 4px;
 	}
 }
-.harness-search-module .CoveoFieldValue.CoveoFieldValueCode .coveo-clickable {
+.harness-search-module .CoveoFieldValue.CoveoFieldValueGitness .coveo-clickable {
+	color: var(--mod-code-300);
+}
+
+// Code Repository (CR)
+.harness-search-module .CoveoFieldValue.CoveoFieldValueCR {
+	background: var(--mod-code-100);
+	border: 1px solid var(--mod-code-200);
+	color: var(--mod-codes-300);
+	&::before {
+		content: url('/img/icon_code_s.svg');
+		display: inline-block;
+		width: 16px;
+		height: 16px;
+		margin-right: 4px;
+	}
+}
+.harness-search-module .CoveoFieldValue.CoveoFieldValueCR .coveo-clickable {
 	color: var(--mod-code-300);
 }
 
@@ -736,7 +770,14 @@
         height: 16px;
         margin-right: 4px;
     }
-	&[title="Code"]::before {
+	&[title="Gitness"]::before {
+        content: url('/img/icon_code_s.svg');
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        margin-right: 4px;
+    }
+	&[title="Code Repository"]::before {
         content: url('/img/icon_code_s.svg');
         display: inline-block;
         width: 16px;
