added background for sto certification

--- a/src/components/Certifications/styles.module.scss
+++ b/src/components/Certifications/styles.module.scss
@@ -534,9 +534,9 @@
   background-image: url(/img/cert_ccm_bg.svg);
 }
 
-// .certificationsSTO {
-//   background-image: url(/img/cert_harness_bg.svg);
-// }
+.certificationsSTO {
+  background-image: url(/img/cert_sto_bg.svg);
+}
 .certificationsCE {
   background-image: url(/img/cert_ce_bg.svg);
 }
