--- a/src/components/Roadmap/index.module.scss
+++ b/src/components/Roadmap/index.module.scss
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: column;
     height: auto;
+    gap: 20px;
     min-height: 400px;
     .features {
       --ifm-link-color: var(--ifm-color-emphasis-800);
