HDH-207 create roadmapm Mobile view

--- a/src/components/Roadmap/HorizonCard/styles.module.scss
+++ b/src/components/Roadmap/HorizonCard/styles.module.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   gap: 8px;
   border: 2px solid #d9dae5;
+  background-color: white;
   .tag {
     width: auto;
     height: 24px;
