--- a/src/components/Roadmap/index.module.scss
+++ b/src/components/Roadmap/index.module.scss
@@ -4,12 +4,13 @@
   position: relative;
   width: 360px;
   height: 40px;
-  margin: 20px 0;
+  margin: 36px 0;
+
   // padding: 6px;
   .dropdownHeader {
     cursor: pointer;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--gray-200);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -44,9 +45,9 @@
   top: 100%;
   left: 0;
   width: 100%;
-  border: 1px solid #ccc;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--gray-200);
+  background-color: white;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   display: none;
   z-index: 1;
   a {
@@ -59,6 +60,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    padding: 8px 16px;
     gap: 4px;
     img {
       width: 24px;
@@ -74,7 +76,7 @@
     }
   }
   li:hover {
-    background-color: #effbff;
+    background-color: var(--primary-1);
   }
 }
 
@@ -89,7 +91,8 @@
     line-height: 32px;
     letter-spacing: 0em;
     text-align: left;
-    color: #383946;
+    color: var(--gray-700);
+    margin-bottom: 16px;
 
     span {
       text-transform: uppercase;
@@ -102,8 +105,9 @@
     line-height: 28px;
     letter-spacing: 0px;
     text-align: left;
-    color: #0b0b0d;
+    color: var(--gray-900);
     text-align: justify;
+    margin-bottom: 56px;
   }
 
   .RoadmapSection {
@@ -116,9 +120,8 @@
     .section {
       margin-right: 16px;
       padding: 16px;
-
-      background-color: #fafbfc;
-      border: 0.5px solid #b0b1c3;
+      background-color: var(--gray-50);
+      border: 1px solid var(--gray-200);
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -155,5 +158,80 @@
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 599px) {
+  .roadmap .RoadmapSection {
+    display: none;
+  }
+  .roadmap .RoadmapSectionMobile {
+    display: block;
+  }
+  .dropdownHeader {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 599px) {
+  .roadmap .RoadmapSectionMobile {
+    display: none;
+  }
+}
+
+.roadmap .RoadmapSectionMobile {
+  ul.tabItems {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 58px;
+    border: 1px solid var(--gray-200);
+    .listTabItems {
+      display: flex;
+      align-items: center;
+      border: 1px solid var(--gray-200);
+      flex-basis: 50%;
+      height: 100%;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      &:hover {
+        background-color: var(--primary-1);
+      }
+
+      &.active {
+        font-weight: 700;
+        cursor: default;
+        background-color: var(--gray-200);
+      }
+      li {
+        margin: 0;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 26px;
+        letter-spacing: 0px;
+        text-align: left;
+        list-style: none;
+        color: var(--gray-700);
+        cursor: pointer;
+      }
+    }
+  }
+
+  .mobileRoadmapColumn {
+    margin-right: 16px;
+    padding: 16px;
+    background-color: var(--gray-50);
+    border: 1px solid var(--gray-200);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    gap: 10px;
+    min-height: 400px;
   }
 }
